test/should_fail/inh_model_006.gm
model inh_model_001;

edge class A extends A;
